Fixed modules namespace clash; Set Version to 1.2.3

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">ComposeStateEvents</string>
+    <string name="app_name">ComposeStateEventsLib</string>
     <string name="flowers_could_not_load">Failed to load flowers.</string>
 </resources>
